src/objects/Partner_Alert_Filter__c.object
<CustomObject>
    <description>This object allows the partner alerts to be designated to specific partners</description>
    <fields>
        <fullName>Acknowledged__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field allows the portal user to close out the alert and therefore not have it pop up again on their feed.</description>
        <inlineHelpText>If this is checked, it means that the use has acknowledged this information in the alert.</inlineHelpText>
        <label>Acknowledged</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Date_of_Reminder__c</fullName>
        <formula>Remind_Later__c  + 1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date of Reminder</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Partner_Alert__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is the relationship to the Partner Alert object</description>
        <label>Partner Alert</label>
        <referenceTo>Partner_Alert__c</referenceTo>
        <relationshipLabel>Partner Alert Filters</relationshipLabel>
        <relationshipName>Partner_Alert_Filters</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Partner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is the relationship to the Partner Object</description>
        <inlineHelpText>Select which partner you&apos;d like to see this alert.</inlineHelpText>
        <label>Partner</label>
        <referenceTo>Partner__c</referenceTo>
        <relationshipLabel>Partner Alert Filters</relationshipLabel>
        <relationshipName>Partner_Alert_Filters</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Remind_Later__c</fullName>
        <description>The date of which the partner has chosen to be reminded later</description>
        <inlineHelpText>The date of which the partner has chosen to be reminded later</inlineHelpText>
        <label>Remind Later</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Sales_Representative__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The lookup relationship to the Sales Team object.</description>
        <label>Sales Representative</label>
        <referenceTo>BSST__c</referenceTo>
        <relationshipLabel>Partner Alert Filters</relationshipLabel>
        <relationshipName>Partner_Alert_Filters</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Partner Alert Filter</label>
    <nameField>
        <label>Partner Alert Filter Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Partner Alert Filters</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>